--- a/src/style.css
+++ b/src/style.css
@@ -70,8 +70,32 @@ button {
 body {
   background-color: lightgray;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 0.9fr 5fr;
   grid-template-rows: 1fr 1fr 1fr;
+}
+
+#theHeader {
+  background-color: aqua;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+#theSidebar {
+  background-color: blueviolet;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+#theProjectSpace {
+  background-color: brown;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+#theFooter {
+  background-color: blue;
+  grid-row: 3/4;
+  grid-column: 1/3;
 }
 
 
