--- a/src/style.css
+++ b/src/style.css
@@ -70,8 +70,8 @@ button {
 body {
   background-color: lightgray;
   display: grid;
-  grid-template-columns: 0.9fr 5fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 0.7fr 5fr;
+  grid-template-rows: 1fr 1fr 0.3fr;
 }
 
 #theHeader {
@@ -97,6 +97,14 @@ body {
   grid-row: 3/4;
   grid-column: 1/3;
 }
+
+/* Style for the sidebar */
+
+.sidebarContainer > div {
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+}
+
 
 
 
