--- a/src/style.css
+++ b/src/style.css
@@ -70,8 +70,8 @@ button {
 body {
   background-color: lightgray;
   display: grid;
-  grid-template-columns: 0.7fr 5fr;
-  grid-template-rows: 1fr 1fr 0.3fr;
+  grid-template-columns: .2fr 5fr;
+  grid-template-rows: .15fr 1fr 0.1fr;
 }
 
 #theHeader {
@@ -81,7 +81,7 @@ body {
 }
 
 #theSidebar {
-  background-color: blueviolet;
+  background-color: white;
   grid-column: 1/2;
   grid-row: 1/3;
 }
@@ -102,8 +102,79 @@ body {
 
 .sidebarContainer > div {
   display: grid;
-  grid-template-columns: 1fr 8fr;
+  grid-template-columns: 2fr 8fr;
+  padding-top: 1.5rem;
+  padding-right: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-left: 0;
+  font-size: calc(2rem - 12px);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
 }
+
+.img0 {
+  background: url("./images/profile.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img1 {
+  background: url("./images/search.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img2 {
+  background: url("./images/inbox.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img3 {
+  background: url("./images/friend.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img4 {
+  background: url("./images/today.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img5 {
+  background: url("./images/upcoming.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.img6 {
+  background: url("./images/add.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  padding-right: 4rem;
+}
+
+.sidebarContainer > div > p {
+  cursor: pointer;
+}
+
+
+
+
 
 
 
