--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 #theFooter {
-  background-color: blue;
+  background-color: rgb(148, 144, 144);
   grid-row: 3/4;
   grid-column: 1/3;
 }
@@ -177,6 +177,15 @@ body {
 
 
 
+/*Style for the footer */
+
+.footerContainer {
+  text-align: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 
 
