--- a/src/style.css
+++ b/src/style.css
@@ -218,6 +218,21 @@ label {
   display: block;
 }
 
+/*Project blocks */
+
+.projectContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: 1rem;
+}
+
+.projectContainer > div {
+  background-color: white;
+}
+
+
+
 
 
 
